style.css
/* ... */
   .about-text .about-box p:after {
    display: none;
}


#gallery {
    max-width: 800px;
    margin: 2rem auto;
}

#gallery .carousel-item img {
    width: 100% !important;
    height: auto !important;
    object-fit: contain;
}


#gallery .carousel-item img {
  border: 10px solid #fefefe;
  border-radius: 20px;
}

.division h2 {
    display: inline-block;
    padding: 0.5rem 1rem;
    border-radius: 0.5rem;
    margin-bottom: 1rem;
    color: #fefefe;
}

.division:nth-of-type(1) h2,
.division:nth-of-type(2) h2 {
    background-color: #112d4e;
}

.division:not(:nth-of-type(1)):not(:nth-of-type(2)) h2 {
    background-color: #5281b4;
}

.state-section h2 {
    display: inline-block;
    padding: 0.5rem 1rem;
    border-radius: 0.5rem;
    margin-bottom: 1rem;
    background-color: #112d4e;
    color: #fefefe;
  }

.state-section {
    text-align: center;
}

.impact-stats {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2.5rem;
  margin-bottom: 3rem;
}

.impact-box {
  flex: 1 1 280px;
  max-width: 400px;
  background-color: #5281b4;
  padding: 2rem 3rem;
  border-radius: 0.5rem;
  text-align: center;
}

@media (max-width: 500px) {
    .impact-stats {
      flex-direction: column;
      gap: 1rem;
      margin-bottom: 1.5rem;
    }
    .impact-box {
      width: 90%;
      margin: 0 auto;
    }
  }
  


.impact-box h3 {
  margin: 0;
  font-size: 4rem;
  font-weight: bold;
  color: #fefefe;
}

.impact-box p {
  margin: 0;
  font-size: 1.5rem;
  color: #fefefe;
  text-transform: uppercase;
  letter-spacing: 1px;
}

